--- a/trunk/CctsRepository/CctsRepository.csproj
+++ b/trunk/CctsRepository/CctsRepository.csproj
@@ -54,45 +54,45 @@
     <Compile Include="CdtLibrary\CdtLibrarySpec.cs" />
     <Compile Include="EnumLibrary\EnumLibrarySpec.cs" />
     <Compile Include="PrimLibrary\PrimLibrarySpec.cs" />
-    <Compile Include="CcLibrary\ACCSpec.cs" />
+    <Compile Include="CcLibrary\AccSpec.cs" />
     <Compile Include="BieLibrary\AsbieSpec.cs" />
-    <Compile Include="CcLibrary\ASCCSpec.cs" />
+    <Compile Include="CcLibrary\AsccSpec.cs" />
     <Compile Include="BieLibrary\BbieSpec.cs" />
-    <Compile Include="CcLibrary\BCCSpec.cs" />
+    <Compile Include="CcLibrary\BccSpec.cs" />
     <Compile Include="BdtLibrary\BdtSpec.cs" />
-    <Compile Include="CdtLibrary\CDTContentComponentSpec.cs" />
-    <Compile Include="CdtLibrary\CDTSpec.cs" />
-    <Compile Include="CdtLibrary\CDTSupplementaryComponentSpec.cs" />
+    <Compile Include="CdtLibrary\CdtConSpec.cs" />
+    <Compile Include="CdtLibrary\CdtSpec.cs" />
+    <Compile Include="CdtLibrary\CdtSupSpec.cs" />
     <Compile Include="EnumLibrary\CodelistEntrySpec.cs" />
     <Compile Include="BdtLibrary\BdtConSpec.cs" />
-    <Compile Include="EnumLibrary\ENUMSpec.cs" />
+    <Compile Include="EnumLibrary\EnumSpec.cs" />
     <Compile Include="BieLibrary\IAbie.cs" />
-    <Compile Include="CcLibrary\IACC.cs" />
+    <Compile Include="CcLibrary\IAcc.cs" />
     <Compile Include="BieLibrary\IAsbie.cs" />
-    <Compile Include="CcLibrary\IASCC.cs" />
+    <Compile Include="CcLibrary\IAscc.cs" />
     <Compile Include="IBasicType.cs" />
     <Compile Include="BieLibrary\IBbie.cs" />
-    <Compile Include="CcLibrary\IBCC.cs" />
+    <Compile Include="CcLibrary\IBcc.cs" />
     <Compile Include="BdtLibrary\IBdt.cs" />
     <Compile Include="BdtLibrary\IBdtCon.cs" />
     <Compile Include="BdtLibrary\IBdtLibrary.cs" />
     <Compile Include="BieLibrary\IBieLibrary.cs" />
     <Compile Include="bLibrary\IBLibrary.cs" />
-    <Compile Include="CcLibrary\ICCLibrary.cs" />
-    <Compile Include="ICCRepository.cs" />
-    <Compile Include="CdtLibrary\ICDT.cs" />
-    <Compile Include="CdtLibrary\ICDTLibrary.cs" />
-    <Compile Include="CdtLibrary\ICDTSupplementaryComponent.cs" />
+    <Compile Include="CcLibrary\ICcLibrary.cs" />
+    <Compile Include="ICctsRepository.cs" />
+    <Compile Include="CdtLibrary\ICdt.cs" />
+    <Compile Include="CdtLibrary\ICdtLibrary.cs" />
+    <Compile Include="CdtLibrary\ICdtSup.cs" />
     <Compile Include="EnumLibrary\ICodelistEntry.cs" />
-    <Compile Include="CdtLibrary\ICDTContentComponent.cs" />
-    <Compile Include="DocLibrary\IDOCLibrary.cs" />
-    <Compile Include="EnumLibrary\IENUM.cs" />
-    <Compile Include="EnumLibrary\IENUMLibrary.cs" />
-    <Compile Include="PrimLibrary\IPRIM.cs" />
-    <Compile Include="PrimLibrary\IPRIMLibrary.cs" />
+    <Compile Include="CdtLibrary\ICdtCon.cs" />
+    <Compile Include="DocLibrary\IDocLibrary.cs" />
+    <Compile Include="EnumLibrary\IEnum.cs" />
+    <Compile Include="EnumLibrary\IEnumLibrary.cs" />
+    <Compile Include="PrimLibrary\IPrim.cs" />
+    <Compile Include="PrimLibrary\IPrimLibrary.cs" />
     <Compile Include="BdtLibrary\IBdtSup.cs" />
     <Compile Include="DocLibrary\DocLibrarySpec.cs" />
-    <Compile Include="PrimLibrary\PRIMSpec.cs" />
+    <Compile Include="PrimLibrary\PrimSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BdtLibrary\BdtSupSpec.cs" />
   </ItemGroup>
