--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -207,8 +207,8 @@
     <Compile Include="upcc3\Wizards\dev\temporarymodel\abiemodel\PotentialBDT.cs" />
     <Compile Include="upcc3\Wizards\dev\temporarymodel\bdtmodel\TemporaryBDTModel.cs" />
     <Compile Include="upcc3\Wizards\dev\temporarymodel\TemporaryModel.cs" />
-    <Compile Include="upcc3\Wizards\dev\UPCCModelGenerator.xaml.cs">
-      <DependentUpon>UPCCModelGenerator.xaml</DependentUpon>
+    <Compile Include="upcc3\Wizards\dev\UpccModelGenerator.xaml.cs">
+      <DependentUpon>UpccModelGenerator.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="upcc3\Wizards\dev\util\CheckedListModel.cs">
@@ -526,7 +526,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="upcc3\Wizards\dev\UPCCModelGenerator.xaml">
+    <Page Include="upcc3\Wizards\dev\UpccModelGenerator.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
