--- a/UpccModel/UpccModel.csproj
+++ b/UpccModel/UpccModel.csproj
@@ -45,10 +45,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cardinality.cs" />
+    <Compile Include="MetaAssociation.cs" />
+    <Compile Include="MetaAttribute.cs" />
+    <Compile Include="MetaClass.cs" />
+    <Compile Include="MetaClassifier.cs" />
+    <Compile Include="MetaDataType.cs" />
+    <Compile Include="MetaPackage.cs" />
+    <Compile Include="MetaTaggedValue.cs" />
+    <Compile Include="PackageClassifierContainmentRelation.cs" />
+    <Compile Include="PackageContainmentRelation.cs" />
+    <Compile Include="UpccAttributes.cs" />
+    <Compile Include="UpccClasses.cs" />
+    <Compile Include="UpccDataTypes.cs" />
     <Compile Include="UpccModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpccModelLibraries.cs" />
+    <Compile Include="UpccModelPackages.cs" />
     <Compile Include="UpccModelTaggedValues.cs" />
+    <Compile Include="UpccPackageClassifierContainmentRelations.cs" />
+    <Compile Include="UpccPackageContainmentRelations.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
