--- a/trunk/CctsRepository/CctsRepository.csproj
+++ b/trunk/CctsRepository/CctsRepository.csproj
@@ -55,6 +55,11 @@
     <Compile Include="BieLibrary\AbieSpec.cs" />
     <Compile Include="BdtLibrary\BdtLibrarySpec.cs" />
     <Compile Include="BieLibrary\BieLibrarySpec.cs" />
+    <Compile Include="BieLibrary\IBieLibrary.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IBieLibrary.tt</DependentUpon>
+    </Compile>
     <Compile Include="bLibrary\BLibrarySpec.cs" />
     <Compile Include="CcLibrary\CcLibrarySpec.cs" />
     <Compile Include="CdtLibrary\CdtLibrarySpec.cs" />
@@ -85,11 +90,14 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>IBdtLibrary.cs</LastGenOutput>
     </None>
+    <None Include="BieLibrary\IBieLibrary.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>IBieLibrary.cs</LastGenOutput>
+    </None>
     <None Include="t4\helpers.tt">
     </None>
     <None Include="t4\LibraryInterface.tt">
     </None>
-    <Compile Include="BieLibrary\IBieLibrary.cs" />
     <Compile Include="bLibrary\IBLibrary.cs" />
     <Compile Include="CcLibrary\ICcLibrary.cs" />
     <Compile Include="ICctsRepository.cs" />
