--- a/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -141,23 +141,23 @@
     <Compile Include="upcc3\ccts\otf\ValidatingCCRepositoryIntegrationTests.cs" />
     <Compile Include="upcc3\ccts\util\MultiPartTaggedValueTests.cs" />
     <Compile Include="upcc3\import\cctsndr\BDTXsdImporterTests.cs" />
-    <Compile Include="upcc3\Wizards\dev\ABIEModelerFormTest.cs" />
-    <Compile Include="upcc3\Wizards\dev\cache\CCCacheTest.cs" />
+    <Compile Include="upcc3\Wizards\dev\AbieModelerFormTest.cs" />
+    <Compile Include="upcc3\Wizards\dev\cache\CcCacheTest.cs" />
     <Compile Include="upcc3\Wizards\dev\StandardLibraryImporterFormTest.cs" />
-    <Compile Include="upcc3\Wizards\dev\UPCCModelGeneratorFormTest.cs" />
+    <Compile Include="upcc3\Wizards\dev\UpccModelCreatorFormTest.cs" />
     <Compile Include="upcc3\Wizards\dev\TestRepository\EARepositoryABIEEditor.cs" />
     <Compile Include="upcc3\Wizards\dev\util\TemporaryABIEModelTest.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryLibraryImporter.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryModelCreator.cs" />
     <Compile Include="upcc3\Wizards\dev\TestRepository\EARepositoryCCCache.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryResourceHandler.cs" />
-    <Compile Include="upcc3\Wizards\util\XsdImporterFormTest.cs" />
-    <Compile Include="upcc3\Wizards\util\UPCCModelWizardFormTest.cs" />
+    <Compile Include="upcc3\Wizards\XsdImporterFormTest.cs" />
+    <Compile Include="upcc3\Wizards\UPCCModelWizardFormTest.cs" />
     <Compile Include="upcc3\Wizards\util\ResourceDescriptorTest.cs" />
     <Compile Include="upcc3\Wizards\util\ResourceHandlerTest.cs" />
     <Compile Include="upcc3\Wizards\util\DatabaseHandlerTest.cs" />
     <Compile Include="upcc3\Wizards\util\LibraryImporterTest.cs" />
-    <Compile Include="upcc3\Wizards\util\StandardLibraryImporterFormTest.cs" />
+    <Compile Include="upcc3\Wizards\StandardLibraryImporterFormTest.cs" />
     <Compile Include="upcc3\Wizards\util\VersionDescriptorTest.cs" />
     <Compile Include="upcc3\Wizards\util\VersionHandlerTest.cs" />
     <Compile Include="upcc3\import\cctsndr\XSDImporterTest.cs" />
