Initial Version of the new ABIE Editor having the Controls bound to the underlying Data Model. The binding is currently implemented for the combo box containing the Core Component Libraries as well as for the combo box containing the Aggregated Core Components of the selected Core Component Library.

--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -198,6 +198,7 @@
     <Compile Include="upcc3\Wizards\dev\AbieEditor.xaml.cs">
       <DependentUpon>AbieEditor.xaml</DependentUpon>
     </Compile>
+    <Compile Include="upcc3\Wizards\dev\binding\BindingPropertyNames.cs" />
     <Compile Include="upcc3\Wizards\dev\cache\CacheItemBdtLibrary.cs" />
     <Compile Include="upcc3\Wizards\dev\cache\CacheItemBieLibrary.cs" />
     <Compile Include="upcc3\Wizards\dev\cache\CacheItemCcLibrary.cs" />
@@ -572,5 +573,6 @@
   <ItemGroup>
     <Folder Include="doc\" />
     <Folder Include="images\" />
+    <Folder Include="upcc3\Wizards\dev\ui\" />
   </ItemGroup>
 </Project>
